# SUB1D

./: .gitignore  EXAMPLE CONFINED S_Hanford_68c_paramfile.par  EXAMPLE UNCONFINED Lindsay_5c_Test_paramfile.par  README.md  environment.yml  model.py  plotting.py  pyproject.toml
benchmarks/: bench_solvers.py
examples/: confined_hanford.yaml  unconfined_lindsay.yaml
legacy/: model_legacy.py  parameters_legacy.py  solver_legacy.py  utils_legacy.py
sub1d/: __init__.py  cli.py  compaction.py  config.py  diagnostics.py  exceptions.py  head_io.py  layers.py  model.py  output.py  plotting.py  solver.py  utils.py
tests/: conftest.py  test_compaction.py  test_config.py  test_diagnostics.py  test_golden_regression.py  test_head_io.py  test_integration.py  test_solver.py
